Update: fixed the werd one px gap in the disposer

--- a/Extension-ts/src/static/contentScript.css
+++ b/Extension-ts/src/static/contentScript.css
@@ -23,6 +23,7 @@
 
 .disposer-highlighter {
   position: absolute;
+  top: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgba(255, 255, 255, 0.018);
